# cmake-multi-project-example

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
lib_a/: CMakeLists.txt
lib_a/include/: class_a.hpp
lib_a/test/: CMakeLists.txt  main.cpp  test_lib_a.cpp
lib_b/: CMakeLists.txt
lib_b/include/: class_b.hpp
lib_b/src/: class_b.cpp
